--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@chakra-ui/react": "^1.8.7",
         "@emotion/react": "^11.8.2",
         "@emotion/styled": "^11.8.1",
+        "@tanstack/react-query": "^4.0.10",
         "@testing-library/jest-dom": "^5.16.3",
         "@testing-library/react": "^10.4.9",
         "@testing-library/user-event": "^12.8.3",
