--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -184,6 +184,7 @@
             }
         ], //强制驼峰法命名（ts）
         "@typescript-eslint/no-use-before-define": 0,
-        "@typescript-eslint/no-var-requires": 1 // 使用ES6 import
+        "@typescript-eslint/no-var-requires": 1 ,// 使用ES6 import
+        "@typescript-eslint/no-non-null-assertion": "off"
     }
 }
